[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/TileButton.gd" type="Script" id=1]
[ext_resource path="res://tiles/test/thumbnail2.png" type="Texture" id=2]
[ext_resource path="res://tiles/test/thumbnail1.png" type="Texture" id=3]
[ext_resource path="res://tiles/test/thumbnail3.png" type="Texture" id=4]
[ext_resource path="res://scenes/DebugPanel.gd" type="Script" id=5]
[ext_resource path="res://tiles/test/thumbnail4.png" type="Texture" id=6]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DebugPanel" type="Panel" parent="."]
anchor_left = 0.826
anchor_right = 1.0
margin_left = 0.0799561
margin_bottom = 457.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="DebugPanel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DebugPanel/Container"]
margin_right = 220.0
margin_bottom = 14.0
text = "Local"

[node name="LocalCoordinates" type="HBoxContainer" parent="DebugPanel/Container"]
margin_top = 26.0
margin_right = 220.0
margin_bottom = 40.0

[node name="X" type="Label" parent="DebugPanel/Container/LocalCoordinates"]
margin_right = 15.0
margin_bottom = 14.0
text = "x: "

[node name="XValue" type="Label" parent="DebugPanel/Container/LocalCoordinates"]
margin_left = 19.0
margin_right = 27.0
margin_bottom = 14.0
text = "0"

[node name="Y" type="Label" parent="DebugPanel/Container/LocalCoordinates"]
margin_left = 31.0
margin_right = 46.0
margin_bottom = 14.0
text = "y: "

[node name="YValue" type="Label" parent="DebugPanel/Container/LocalCoordinates"]
margin_left = 50.0
margin_right = 58.0
margin_bottom = 14.0
text = "0"

[node name="Label2" type="Label" parent="DebugPanel/Container"]
margin_top = 52.0
margin_right = 220.0
margin_bottom = 66.0
text = "World"

[node name="WorldCoordinates" type="HBoxContainer" parent="DebugPanel/Container"]
margin_top = 78.0
margin_right = 220.0
margin_bottom = 92.0

[node name="X" type="Label" parent="DebugPanel/Container/WorldCoordinates"]
margin_right = 15.0
margin_bottom = 14.0
text = "x: "

[node name="XValue" type="Label" parent="DebugPanel/Container/WorldCoordinates"]
margin_left = 19.0
margin_right = 27.0
margin_bottom = 14.0
text = "0"

[node name="Y" type="Label" parent="DebugPanel/Container/WorldCoordinates"]
margin_left = 31.0
margin_right = 46.0
margin_bottom = 14.0
text = "y: "

[node name="YValue" type="Label" parent="DebugPanel/Container/WorldCoordinates"]
margin_left = 50.0
margin_right = 58.0
margin_bottom = 14.0
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="DebugPanel/Container"]
margin_top = 104.0
margin_right = 220.0
margin_bottom = 412.0
custom_constants/separation = 80

[node name="LayerData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer"]
margin_right = 66.0
margin_bottom = 308.0
custom_constants/separation = 10

[node name="Label3" type="Label" parent="DebugPanel/Container/HBoxContainer/LayerData"]
margin_right = 66.0
margin_bottom = 14.0
text = "Layer data"

[node name="Layers" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/LayerData"]
margin_top = 24.0
margin_right = 66.0
margin_bottom = 164.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer1" type="Label" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers"]
margin_right = 66.0
margin_bottom = 14.0
text = "1"

[node name="SectionsContainer1" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers"]
margin_top = 18.0
margin_right = 66.0
margin_bottom = 32.0
custom_constants/separation = 12

[node name="SectionsLabel" type="Label" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers/SectionsContainer1"]
margin_right = 54.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Sections"

[node name="SectionsData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers/SectionsContainer1"]
margin_left = 66.0
margin_right = 66.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer2" type="Label" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers"]
margin_top = 36.0
margin_right = 66.0
margin_bottom = 50.0
text = "2"

[node name="SectionsContainer2" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers"]
margin_top = 54.0
margin_right = 66.0
margin_bottom = 68.0
custom_constants/separation = 12

[node name="SectionsLabel" type="Label" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers/SectionsContainer2"]
margin_right = 54.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Sections"

[node name="SectionsData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers/SectionsContainer2"]
margin_left = 66.0
margin_right = 66.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer3" type="Label" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers"]
margin_top = 72.0
margin_right = 66.0
margin_bottom = 86.0
text = "3"

[node name="SectionsContainer3" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers"]
margin_top = 90.0
margin_right = 66.0
margin_bottom = 104.0
custom_constants/separation = 12

[node name="SectionsLabel" type="Label" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers/SectionsContainer3"]
margin_right = 54.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Sections"

[node name="SectionsData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers/SectionsContainer3"]
margin_left = 66.0
margin_right = 66.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer4" type="Label" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers"]
margin_top = 108.0
margin_right = 66.0
margin_bottom = 122.0
text = "4"

[node name="SectionsContainer4" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers"]
margin_top = 126.0
margin_right = 66.0
margin_bottom = 140.0
custom_constants/separation = 12

[node name="SectionsLabel" type="Label" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers/SectionsContainer4"]
margin_right = 54.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Sections"

[node name="SectionsData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/LayerData/Layers/SectionsContainer4"]
margin_left = 66.0
margin_right = 66.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer"]
margin_left = 146.0
margin_right = 220.0
margin_bottom = 308.0
custom_constants/separation = 10

[node name="Label3" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData"]
margin_right = 74.0
margin_bottom = 14.0
text = "Tile data"

[node name="Layers" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData"]
margin_top = 24.0
margin_right = 74.0
margin_bottom = 308.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer1" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers"]
margin_right = 74.0
margin_bottom = 14.0
text = "1"

[node name="TileIdContainer1" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers"]
margin_top = 18.0
margin_right = 74.0
margin_bottom = 32.0
custom_constants/separation = 12

[node name="TileIdLabel" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileIdContainer1"]
margin_right = 40.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tile Id"

[node name="TileIdData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileIdContainer1"]
margin_left = 52.0
margin_right = 52.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileFlipContainer1" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers"]
margin_top = 36.0
margin_right = 74.0
margin_bottom = 68.0
custom_constants/separation = 12

[node name="TileFlipLabel" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer1"]
margin_right = 47.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tile flip"

[node name="TileFlipData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer1"]
margin_left = 59.0
margin_right = 74.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XFlipData" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer1/TileFlipData"]
margin_right = 15.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer1/TileFlipData/XFlipData"]
margin_right = 11.0
margin_bottom = 14.0
text = "x:"

[node name="Value" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer1/TileFlipData/XFlipData"]
margin_left = 15.0
margin_right = 15.0
margin_bottom = 14.0

[node name="YFlipData" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer1/TileFlipData"]
margin_top = 18.0
margin_right = 15.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer1/TileFlipData/YFlipData"]
margin_right = 11.0
margin_bottom = 14.0
text = "y:"

[node name="Value" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer1/TileFlipData/YFlipData"]
margin_left = 15.0
margin_right = 15.0
margin_bottom = 14.0

[node name="Layer2" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers"]
margin_top = 72.0
margin_right = 74.0
margin_bottom = 86.0
text = "2"

[node name="TileIdContainer2" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers"]
margin_top = 90.0
margin_right = 74.0
margin_bottom = 104.0
custom_constants/separation = 12

[node name="TileIdLabel" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileIdContainer2"]
margin_right = 40.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tile Id"

[node name="TileIdData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileIdContainer2"]
margin_left = 52.0
margin_right = 52.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileFlipContainer2" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers"]
margin_top = 108.0
margin_right = 74.0
margin_bottom = 140.0
custom_constants/separation = 12

[node name="TileFlipLabel" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer2"]
margin_right = 47.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tile flip"

[node name="TileFlipData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer2"]
margin_left = 59.0
margin_right = 74.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XFlipData" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer2/TileFlipData"]
margin_right = 15.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer2/TileFlipData/XFlipData"]
margin_right = 11.0
margin_bottom = 14.0
text = "x:"

[node name="Value" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer2/TileFlipData/XFlipData"]
margin_left = 15.0
margin_right = 15.0
margin_bottom = 14.0

[node name="YFlipData" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer2/TileFlipData"]
margin_top = 18.0
margin_right = 15.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer2/TileFlipData/YFlipData"]
margin_right = 11.0
margin_bottom = 14.0
text = "y:"

[node name="Value" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer2/TileFlipData/YFlipData"]
margin_left = 15.0
margin_right = 15.0
margin_bottom = 14.0

[node name="Layer3" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers"]
margin_top = 144.0
margin_right = 74.0
margin_bottom = 158.0
text = "3"

[node name="TileIdContainer3" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers"]
margin_top = 162.0
margin_right = 74.0
margin_bottom = 176.0
custom_constants/separation = 12

[node name="TileIdLabel" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileIdContainer3"]
margin_right = 40.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tile Id"

[node name="TileIdData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileIdContainer3"]
margin_left = 52.0
margin_right = 52.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileFlipContainer3" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers"]
margin_top = 180.0
margin_right = 74.0
margin_bottom = 212.0
custom_constants/separation = 12

[node name="TileFlipLabel" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer3"]
margin_right = 47.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tile flip"

[node name="TileFlipData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer3"]
margin_left = 59.0
margin_right = 74.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XFlipData" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer3/TileFlipData"]
margin_right = 15.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer3/TileFlipData/XFlipData"]
margin_right = 11.0
margin_bottom = 14.0
text = "x:"

[node name="Value" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer3/TileFlipData/XFlipData"]
margin_left = 15.0
margin_right = 15.0
margin_bottom = 14.0

[node name="YFlipData" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer3/TileFlipData"]
margin_top = 18.0
margin_right = 15.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer3/TileFlipData/YFlipData"]
margin_right = 11.0
margin_bottom = 14.0
text = "y:"

[node name="Value" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer3/TileFlipData/YFlipData"]
margin_left = 15.0
margin_right = 15.0
margin_bottom = 14.0

[node name="Layer4" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers"]
margin_top = 216.0
margin_right = 74.0
margin_bottom = 230.0
text = "4"

[node name="TileIdContainer4" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers"]
margin_top = 234.0
margin_right = 74.0
margin_bottom = 248.0
custom_constants/separation = 12

[node name="TileIdLabel" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileIdContainer4"]
margin_right = 40.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tile Id"

[node name="TileIdData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileIdContainer4"]
margin_left = 52.0
margin_right = 52.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileFlipContainer4" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers"]
margin_top = 252.0
margin_right = 74.0
margin_bottom = 284.0
custom_constants/separation = 12

[node name="TileFlipLabel" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer4"]
margin_right = 47.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tile flip"

[node name="TileFlipData" type="VBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer4"]
margin_left = 59.0
margin_right = 74.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XFlipData" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer4/TileFlipData"]
margin_right = 15.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer4/TileFlipData/XFlipData"]
margin_right = 11.0
margin_bottom = 14.0
text = "x:"

[node name="Value" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer4/TileFlipData/XFlipData"]
margin_left = 15.0
margin_right = 15.0
margin_bottom = 14.0

[node name="YFlipData" type="HBoxContainer" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer4/TileFlipData"]
margin_top = 18.0
margin_right = 15.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer4/TileFlipData/YFlipData"]
margin_right = 11.0
margin_bottom = 14.0
text = "y:"

[node name="Value" type="Label" parent="DebugPanel/Container/HBoxContainer/TileData/Layers/TileFlipContainer4/TileFlipData/YFlipData"]
margin_left = 15.0
margin_right = 15.0
margin_bottom = 14.0

[node name="TilesPanel" type="Panel" parent="."]
margin_right = 128.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tiles" type="VBoxContainer" parent="TilesPanel"]
margin_right = 138.0
margin_bottom = 218.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile1" type="Button" parent="TilesPanel/Tiles"]
margin_right = 140.0
margin_bottom = 70.0
icon = ExtResource( 3 )
flat = true
align = 0
script = ExtResource( 1 )

[node name="Tile2" type="Button" parent="TilesPanel/Tiles"]
margin_top = 74.0
margin_right = 140.0
margin_bottom = 144.0
icon = ExtResource( 2 )
flat = true
align = 0
script = ExtResource( 1 )

[node name="Tile3" type="Button" parent="TilesPanel/Tiles"]
margin_top = 148.0
margin_right = 140.0
margin_bottom = 218.0
icon = ExtResource( 4 )
flat = true
align = 0
script = ExtResource( 1 )

[node name="Tile4" type="Button" parent="TilesPanel/Tiles"]
margin_top = 222.0
margin_right = 140.0
margin_bottom = 272.0
icon = ExtResource( 6 )
flat = true
align = 0
script = ExtResource( 1 )
[connection signal="button_up" from="TilesPanel/Tiles/Tile1" to="TilesPanel/Tiles/Tile1" method="updateTileId"]
[connection signal="button_up" from="TilesPanel/Tiles/Tile2" to="TilesPanel/Tiles/Tile2" method="updateTileId"]
[connection signal="button_up" from="TilesPanel/Tiles/Tile3" to="TilesPanel/Tiles/Tile3" method="updateTileId"]
[connection signal="button_up" from="TilesPanel/Tiles/Tile4" to="TilesPanel/Tiles/Tile4" method="updateTileId"]
